--- a/skins/editorial/styles/colors.less
+++ b/skins/editorial/styles/colors.less
@@ -226,7 +226,7 @@
 @color-dark-main:           @color-main;
 @color-dark-background:     #0a0a0a;
 @color-dark-font:           #f5f5f5;
-@color-dark-border:         #252530;
+@color-dark-border:         #1a1a24;
 @color-dark-hint:           #55556a;
 @color-dark-information:    shade(@color-main, 30%);
 @color-dark-success:        shade(@color-success, 30%);
@@ -259,7 +259,7 @@
 
 @color-dark-dialog-overlay-background:  fade(#000, 80%);
 
-@color-dark-popover-background:         #0e0e12;
+@color-dark-popover-background:         #141418;
 @color-dark-popover-border:             #252530;
 
 @color-dark-message-information:        shade(@color-main, 30%);
